--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Every CMake project needs to start with these two lines
 cmake_minimum_required(VERSION 3.28) # This is the minimum version of CMake required
-project(Homework VERSION 1.0) # This is the name of the project and its version
-set(PROJECT_AUTHOR "Your Name") # This is the author of the project
+project(homework-solutions VERSION 1.0) # This is the name of the project and its version
+set(PROJECT_AUTHOR "David") # This is the author of the project
 
 set(CMAKE_CXX_STANDARD 20) # This sets the C++ standard to C++20
 set(CMAKE_CXX_STANDARD_REQUIRED True) # This tells CMake that the stdandard must be available
@@ -19,3 +19,4 @@ add_subdirectory(src)
 enable_testing() # This line allows to call ctest after compilation
 add_subdirectory(tests)
 add_subdirectory(docs)
+add_subdirectory(homework_sep23)
